--- a/pacman.conf
+++ b/pacman.conf
@@ -85,6 +85,13 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
+[archzfs]
+Server = https://zxcvfdsa.com/archzfs/$repo/$arch
+Server = https://archzfs.com/$repo/$arch
+Server = https://mirror.sum7.eu/archlinux/archzfs/$repo/$arch
+Server = https://mirror.biocrafting.net/archlinux/archzfs/$repo/$arch
+Server = https://mirror.in.themindsmaze.com/archzfs/$repo/$arch
+
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
